--- a/style.css
+++ b/style.css
@@ -178,4 +178,40 @@
         text-align: center;
         width: 230px;
     }
+    .imgage{
+        margin-bottom: 24px;
+    }
+    .foot{
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        flex-direction: column;
+        margin-bottom: 120px;
+    }
+    .footer{
+        width: 100%;
+        height: 380px;
+        background-color: #2C343E;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        flex-direction: column;
+    }
+    .footer img{
+        margin-bottom: 50px;
+    }
+    .footer a{
+        font-size: 25px;
+        color: #fff;
+        line-height: 50px;
+        text-decoration: none;
+    }
+    .site{
+        margin-top: 50px;
+    }
+    i{
+        font-size: 45px;
+        color: #fff;
+        margin: 0 25px;
+    }
 }
