--- a/style.css
+++ b/style.css
@@ -28,9 +28,6 @@
     .site-head__img{
         width: 180px;
     }
-    .site-head__li{
-
-    }
     .site-head__item{
         text-decoration: none;
         color: #fff;
@@ -56,6 +53,7 @@
     }
     .site-head__link:hover > .site-head__list {
         display: block;
+
     }
     .site-head__bg{
         background-image: url(images/Bitmap.png);
@@ -209,9 +207,217 @@
     .site{
         margin-top: 50px;
     }
-    i{
+    .site i{
         font-size: 45px;
         color: #fff;
         margin: 0 25px;
     }
 }
+
+
+
+
+@media (min-width:421px) and (max-width:1300px) {
+    .container{
+        max-width: 1100px;
+        width: 100%;
+        margin: 0 auto;
+    }
+    .site-head{
+        margin-top: 52px;
+        width: 990px;
+    }
+    .site-head__nav{
+        width: 990px;
+        margin: 0 auto;
+        margin-bottom: 40px;
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+    }
+    .site-head__img{
+        width: 180px;
+    }
+    .site-head__list{
+        display: flex;
+        justify-content: space-between;
+        width: 320px;
+        margin: 0 auto;
+        align-items: center;
+        list-style-type: none;
+    }
+    .site-head__item{
+        text-decoration: none;
+        color: #333;
+    }
+    .site-head__bg{
+        background: url(images/Bitmap.png);
+        background-repeat: no-repeat;
+        background-size: 990px 550px;
+        width: 990px;
+        height: 600px;
+        display :flex;
+        align-items: flex-start;
+        justify-content: center;
+        flex-direction: column;
+    }
+    .site-head__sub{
+        margin-left: 100px;
+        font-family: 'Fraunces';
+        font-size: 50px;
+        width: 350px;
+        text-align: left;
+        color: #fff;
+    }
+    .site-head__text{
+        margin-left: 100px;
+        font-family: 'Fraunces';
+        font-weight: 400;
+        font-size: 18px;
+        line-height: 30px;
+        margin-top: 20px;
+        margin-bottom: 39px;
+        width: 350px;
+        text-align: left;
+        color: #fff;
+    }
+    .site-head__btn{
+        width: 217px;
+        height: 57px;
+        background-color: #0E8784;
+        color: #fff;
+        font-size: 18px;
+        font-family: 'Fraunces';
+        text-decoration: none;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        border-radius: 6px;
+    }
+     .free{
+        text-align: center;
+        margin-top: 120px;
+        margin-bottom: 13px;
+        font-size: 50px;
+        color: #333D4B;
+    }
+    .main{
+        width: 990px;
+    }
+    .main__cards{
+        width: 990px;
+        margin: 0 auto;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+    }
+    .main__content{
+        width: 250px;
+        display: flex;
+        align-items: flex-start;
+        justify-content: center;
+        flex-direction: column;
+    }
+    .main__content h1{
+        width: 150px;
+        font-size: 24px;
+        color: #333D4B;
+        font-family: 'Fraunces';
+        text-align: left;
+    }
+    .image{}
+    .main__content p{
+        text-align: left;
+        margin-top: 20px;
+        margin-bottom: 40px;
+        width:200px;
+        font-size: 15px;
+        color: #333D4B;
+    }
+    .fooot{
+        width: 990px;
+        margin: 0 auto;
+        display: flex;
+        align-items: flex-start;
+        justify-content: start;
+        flex-direction: column;
+    }
+    .main__foot{
+        background-color: #2C343E;
+        width: 950px;
+        margin: 0 auto;
+        height: 400px;
+        border-radius: 10px;
+    }
+    .main__foot h1{
+        margin: 0 auto;
+        padding-top: 40px;
+        padding-bottom: 25px;
+        font-family: 'Fraunces';
+        font-size: 40px;
+        width: 350px;
+        text-align: center;
+        color: #fff;
+    }
+    .main__foot p{
+        margin: 0 auto;
+        text-align: center;
+        margin-bottom: 40px;
+        width:560px;
+        font-size: 18px;
+        color: #ffffff;
+        padding-bottom: 20px;
+        
+    }
+    .main__footer{
+        margin: 0 auto;
+        margin-top: -200px;
+        display: flex;
+        justify-content: space-between;
+    }
+    .main__card{
+        width: 280px;
+        height: 380px;
+        background-color: #0E8784;
+        color: #fff;
+        margin: 0 auto;
+        margin-top: 20px;
+        border-radius: 8px;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        flex-direction: column;
+    }
+    .main__card h1{
+        margin-top: 56px;
+        margin-bottom: 24px;
+    }
+    .main__card p{
+        text-align: center;
+        width: 230px;
+    }
+    .imgage{
+        margin-bottom: 24px;
+    }
+    .foot{
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        margin-bottom: 120px;
+    }
+    .footer{
+
+    }
+    .footer img{
+       
+    }
+    .footer a{
+
+    }
+    .site{
+
+    }
+    .site i{
+
+    }
+}    
