--- a/style.css
+++ b/style.css
@@ -11,15 +11,18 @@
 }
 @media (max-width:420px) {
     .container{
-        max-width: 400px;
+        max-width: 420px;
         width: 100%;
         margin: 0 auto;
     }
     .site-head{
         margin-top: 52px;
-        width: 380px;
+        max-width: 420px;
+        width: 100%;
     }
     .site-head__nav{
+        max-width: 420px;
+        width: 100%;
         margin-bottom: 40px;
         display: flex;
         align-items: center;
@@ -65,13 +68,15 @@
         align-items: center;
         justify-content: center;
         flex-direction: column;
-        width: 380px;
+        max-width: 420px;
+        width: 100%;
         height: 600px;
     }
     .site-head__sub{
         font-family: 'Fraunces';
         font-size: 50px;
-        width: 350px;
+        max-width: 350px;
+        width: 100%;
         text-align: center;
         color: #fff;
     }
@@ -82,12 +87,14 @@
         line-height: 30px;
         margin-top: 20px;
         margin-bottom: 39px;
-        width: 350px;
+        max-width: 350px;
+        width: 100%;
         text-align: center;
         color: #fff;
     }
     .site-head__btn1{
-        width: 217px;
+        max-width: 217px;
+        width: 100%;
         height: 57px;
         background-color: #0E8784;
         color: #fff;
@@ -110,8 +117,19 @@
         margin-bottom: 13px;
         font-size: 50px;
         color: #333D4B;
+        margin: 0 auto;
+        max-width: 420px;
+        width: 100%;
+    }
+    .main__cards{
+        max-width: 420px;
+        width: 100%;
+        margin: 0 auto;
     }
     .main__content1{
+        max-width: 300px;
+        width: 100%;
+        margin: 0 auto;
         display: flex;
         align-items: center;
         justify-content: center;
@@ -123,16 +141,19 @@
         font-family: 'Fraunces';
     }
     .main__content1 p{
+        margin: 0 auto;
         text-align: center;
         margin-top: 20px;
         margin-bottom: 40px;
-        width: 300px;
+        max-width: 240px;
+        width: 100%;
         font-size: 18px;
         color: #333D4B;
     }
     .main__foot{
         background-color: #2C343E;
-        width: 400px;
+        max-width: 420px;
+        width: 100%;
         height: 850px;
         border-radius: 10px;
     }
@@ -142,7 +163,8 @@
         padding-bottom: 25px;
         font-family: 'Fraunces';
         font-size: 40px;
-        width: 350px;
+        max-width: 350px;
+        width: 100%;
         text-align: center;
         color: #fff;
     }
@@ -150,18 +172,22 @@
         margin: 0 auto;
         text-align: center;
         margin-bottom: 40px;
-        width: 300px;
+        max-width: 300px;
+        width: 100%;
         font-size: 18px;
         color: #ffffff;
         padding-bottom: 20px;
         
     }
     .main__footer{
+        max-width: 300px;
+        width: 100%;
         margin: 0 auto;
         margin-top: -600px;
     }
     .main__card{
-        width: 280px;
+        max-width: 420px;
+        width: 100%;
         height: 380px;
         background-color: #0E8784;
         color: #fff;
@@ -179,19 +205,22 @@
     }
     .main__card p{
         text-align: center;
-        width: 230px;
+        max-width: 230px;
+        width: 100%;
     }
     .imgage{
         margin-bottom: 24px;
     }
     .main__content{
+        margin: 0 auto;
         display: flex;
-        align-items: flex-start;
+        align-items: center;
         justify-content: center;
         flex-direction: column;
     }
     .main__content h1{
-        width: 300px;
+        max-width: 300px;
+        width: 100%;
         font-size: 24px;
         color: #333D4B;
         font-family: 'Fraunces';
@@ -208,7 +237,8 @@
         text-align: center;
         margin-top: 20px;
         margin-bottom: 40px;
-        width:300px;
+        max-width: 300px;
+        width: 100%;
         font-size: 15px;
         color: #333D4B;
         margin: 0 auto;
@@ -216,7 +246,29 @@
     .site-head__btn1{
         margin: 0 auto;
         margin-top: 50px;
-        width: 217px;
+        max-width: 217px;
+        width: 100%;
+        height: 57px;
+        background-color: #0E8784;
+        color: #fff;
+        font-size: 18px;
+        font-family: 'Fraunces';
+        text-decoration: none;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        border-radius: 6px;
+    }
+    .btn5{
+        display: flex;
+        align-items: center;
+        justify-content: center;
+    }
+    .site-head__btn2{
+        margin: 0 auto;
+        margin-top: 50px;
+        max-width: 420px;
+        width: 100%;
         height: 57px;
         background-color: #0E8784;
         color: #fff;
@@ -230,7 +282,8 @@
     }
     .foot{
         margin: 0 auto;
-        width: 380px;
+        max-width: 420px;
+        width: 100%;
         display: flex;
         align-items: center;
         justify-content: center;
@@ -239,8 +292,8 @@
     }
     .footer{
         margin-top: 100px;
+        max-width: 420px;
         width: 100%;
-        height: 380px;
         background-color: #2C343E;
         display: flex;
         align-items: center;
@@ -264,23 +317,23 @@
         color: #fff;
         margin: 0 25px;
     }
+    
 }
 
 
 
-
-@media (min-width:421px) and (max-width:1300px) {
+@media (min-width:990px) and (max-width:2000px) {
     .container{
-        max-width: 1100px;
+        max-width: 1200px;
         width: 100%;
         margin: 0 auto;
     }
     .site-head{
         margin-top: 52px;
-        width: 990px;
+        width: 1200px;
     }
     .site-head__nav{
-        width: 990px;
+        width: 1200px;
         margin: 0 auto;
         margin-bottom: 40px;
         display: flex;
@@ -312,24 +365,22 @@
     .site-head__bg{
         background: url(images/Bitmap.png);
         background-repeat: no-repeat;
-        background-size: 990px 550px;
-        width: 990px;
+        background-size: 1200px 750px;
+        width: 1200px;
         height: 600px;
-        display :flex;
-        align-items: flex-start;
-        justify-content: center;
-        flex-direction: column;
     }
     .site-head__sub{
-        margin-left: 100px;
         font-family: 'Fraunces';
         font-size: 50px;
         width: 350px;
         text-align: left;
         color: #fff;
     }
+    .site-head__main{
+        margin-left: 150px;
+        padding-top: 120px;
+    }
     .site-head__text{
-        margin-left: 100px;
         font-family: 'Fraunces';
         font-weight: 400;
         font-size: 18px;
@@ -340,20 +391,6 @@
         text-align: left;
         color: #fff;
     }
-    .site-head__btn{
-        margin: 0 auto;
-        width: 217px;
-        height: 57px;
-        background-color: #0E8784;
-        color: #fff;
-        font-size: 18px;
-        font-family: 'Fraunces';
-        text-decoration: none;
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        border-radius: 6px;
-    }
      .free{
         text-align: center;
         margin-top: 120px;
@@ -362,12 +399,12 @@
         color: #333D4B;
     }
     .main{
-        width: 990px;
+        width: 1200px;
 
         margin: 0 auto;
     }
     .main__cards{
-        width: 990px;
+        width: 1200px;
         margin: 0 auto;
         display: flex;
         align-items: center;
@@ -395,26 +432,20 @@
         color: #333D4B;
     }
     .fooot{
-        width: 990px;
+        width: 1200px;
         margin: 0 auto;
         display: flex;
         align-items: center;
-        justify-content: start;
         flex-direction: column;
     }
     .site-head__btn1{
-        margin: 0 auto;
-        margin-top: 50px;
-        width: 217px;
-        height: 57px;
+        margin-top: 40px;
+        padding: 25px 80px;
         background-color: #0E8784;
         color: #fff;
         font-size: 18px;
         font-family: 'Fraunces';
         text-decoration: none;
-        display: flex;
-        justify-content: center;
-        align-items: center;
         border-radius: 6px;
     }
     .site-head__btn1:hover{
@@ -423,7 +454,7 @@
         transition: 0.3s;
     }
     .main__content1{
-        width: 990px;
+        width: 1200px;
         display: flex;
         align-items: center;
         justify-content: center;
@@ -446,7 +477,7 @@
     }
     .main__foot{
         background-color: #2C343E;
-        width: 950px;
+        width: 1300px;
         margin: 0 auto;
         height: 400px;
         border-radius: 10px;
@@ -502,10 +533,10 @@
         margin-bottom: 24px;
     }
     .foot{
-        width: 990px;
+        width: 1200px;
         display: flex;
         align-items: flex-start;
-        justify-content: center;
+        justify-content: space-around;
        
     }
     .footer{
@@ -529,4 +560,4 @@
         color: #fff;
         margin: 0 15px;
     }
-}    
+} 
