--- a/style.css
+++ b/style.css
@@ -21,7 +21,8 @@
         width: 100%;
     }
     .site-head__nav{
-        max-width: 420px;
+        margin: 0 auto;
+        max-width: 400px;
         width: 100%;
         margin-bottom: 40px;
         display: flex;
@@ -29,7 +30,8 @@
         justify-content: space-between;
     }
     .site-head__img{
-        width: 180px;
+        max-width: 180px;
+        width: 100%;
     }
     .site-head__item{
         text-decoration: none;
@@ -183,10 +185,10 @@
         max-width: 300px;
         width: 100%;
         margin: 0 auto;
-        margin-top: -600px;
+        margin-top: -500px;
     }
     .main__card{
-        max-width: 420px;
+        max-width: 300px;
         width: 100%;
         height: 380px;
         background-color: #0E8784;
@@ -259,11 +261,6 @@
         align-items: center;
         border-radius: 6px;
     }
-    .btn5{
-        display: flex;
-        align-items: center;
-        justify-content: center;
-    }
     .site-head__btn2{
         margin: 0 auto;
         margin-top: 50px;
@@ -301,7 +298,13 @@
         flex-direction: column;
     }
     .footer img{
-        margin-bottom: 50px;
+        margin: 20px;
+    }
+    .links{
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
     }
     .footer a{
         font-size: 25px;
@@ -315,14 +318,14 @@
     .site i{
         font-size: 45px;
         color: #fff;
-        margin: 0 25px;
+        margin: 0 10px;
     }
     
 }
 
 
 
-@media (min-width:990px) and (max-width:2000px) {
+@media (min-width:421px) and (max-width:2000px) {
     .container{
         max-width: 1200px;
         width: 100%;
@@ -453,6 +456,21 @@
         color: #333;
         transition: 0.3s;
     }
+    .site-head__btn2{
+        margin-top: 40px;
+        padding: 25px 80px;
+        background-color: #0E8784;
+        color: #fff;
+        font-size: 18px;
+        font-family: 'Fraunces';
+        text-decoration: none;
+        border-radius: 6px;
+    }
+    .site-head__btn2:hover{
+        background-color: aqua;
+        color: #333;
+        transition: 0.3s;
+    }
     .main__content1{
         width: 1200px;
         display: flex;
@@ -481,6 +499,7 @@
         margin: 0 auto;
         height: 400px;
         border-radius: 10px;
+        margin-bottom: 100px;
     }
     .main__foot h1{
         margin: 0 auto;
@@ -541,6 +560,8 @@
     }
     .footer{
         margin-top: 100px;
+        margin:100px auto;
+        margin-bottom: 0;
         width: 100%;
         height: 150px;
         background-color: #2C343E;
